--- a/AtakHanMobile4/app/src/main/res/layout/activity_main.xml
+++ b/AtakHanMobile4/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
             android:orientation="vertical"
             android:gravity="center"
             android:padding="16dp"
-            android:background="@drawable/rounded_corner_background">
+            android:background="@drawable/corner_background"
+            >
 
         <TextView
                 android:id="@+id/throttleTextView"
@@ -39,7 +40,10 @@
                 android:text="Throttle: 0"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:textStyle="bold"
+                android:background="@drawable/bg_throttle"/>
+
 
         <TextView
                 android:id="@+id/rudderTextView"
@@ -48,7 +52,9 @@
                 android:text="Rudder: 0"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:textStyle="bold"
+                android:background="@drawable/bg_rudder"/>
 
         <TextView
                 android:id="@+id/elevatorTextView"
@@ -57,8 +63,15 @@
                 android:text="Elevator: 0"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"
-                android:padding="8dp" />
-
+                android:padding="8dp"
+                android:textStyle="bold"
+                android:background="@drawable/bg_elevator"/>
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/bg_ailerion"
+        >
         <TextView
                 android:id="@+id/ailerionRightTextView"
                 android:layout_width="wrap_content"
@@ -66,7 +79,9 @@
                 android:text="Ailerion Right: 0"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:textStyle="bold"
+                />
 
         <TextView
                 android:id="@+id/ailerionLeftTextView"
@@ -75,7 +90,9 @@
                 android:text="Ailerion Left: 0"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"
-                android:padding="8dp" />
-
+                android:padding="8dp"
+                android:textStyle="bold"
+                />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
