--- a/AtakHanMobile4/app/src/main/res/layout/activity_main.xml
+++ b/AtakHanMobile4/app/src/main/res/layout/activity_main.xml
@@ -95,4 +95,14 @@
                 />
         </LinearLayout>
     </LinearLayout>
+
+    <Button
+            android:id="@+id/motorButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Motor"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="16dp"
+            android:color = "@android:color/holo_red_dark"/>
 </RelativeLayout>
